--- a/tools/ToDo/todo.html
+++ b/tools/ToDo/todo.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
+  <title>ToDoList</title>
   <link rel="stylesheet" type="text/css" href="todo.css">
 </head>
 
