--- a/tools/ToDo/todo.html
+++ b/tools/ToDo/todo.html
@@ -1,6 +1,9 @@
 <html>
 
-<head></head>
+<head>
+<meta charset="utf-8">
+<title>任务大厅</title>   
+</head>
 
 <body>
     <div id="myDIV" class="header">
@@ -10,12 +13,8 @@
     </div>
 
     <ul id="myUL">
-        <li>Hit the gym<span class="close">×</span></li>
-        <li class="checked">Pay bills<span class="close">×</span></li>
-        <li>Meet George<span class="close">×</span></li>
-        <li>Buy eggs<span class="close">×</span></li>
-        <li>Read a book<span class="close">×</span></li>
-        <li>Organize office<span class="close">×</span></li>
+        <li>未完成的任务<span class="close">×</span></li>
+        <li class="checked">已完成的任务<span class="close">×</span></li>
     </ul>
     <style>
         body {
